2006-11-12  Doug Hellmann  <dhellmann@racemi.com>

	* templates/popular_subscription_list.html: Template for the
	popular_subscription_list tag.

	* templates/newest_subscription_list.html: Template for the
	newest_subscription_list tag.

	* templatetags/subscription_list_tags.py
	(newest_subscription_list): Template tag to show a list of the
	most recently subscribed podcasts.
	(popular_subscription_list): Template tag to show a list of the
	most popular podcasts.

	* views.py: Move some of the main views to the site-wide views module.

	* templates/index.html: Update the formatting of the "login or
	register" invitation section of the home page.

2006-11-11  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (user): Include json representations of queue and
	subscriptions in the data passed to the template.

	* templates/user.html: Add some JavaScript to remember the initial
	state of the queue and subscriptions list.  We use this data to
	draw the page in the onload handler instead of the template so we
	only have one place where the layout logic for that stuff lives.

	* download_cache.py (retrieve_feed): If the cached_result does not
	have a 'modified' value or an 'etag' value, that is ok.  Not all
	feeds are going to provide those values.

	* templates/user.html: Replace the add button with a dojo button.

2006-11-05  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (user): Allow POST or GET submission of a URL for a feed.
	(contact): Add a simple view to deal with the contact page.
	Mostly this is to get the menu bar, etc., but we will have a form
	for podcasters here, too.

2006-11-04  Doug Hellmann  <dhellmann@racemi.com>

	* templates/index.html: Update layout of new podcast list and
	include links to add, see the home page, and the feed.

	* views.py (subscriptions): When they DELETE a subscription,
	remove the relationship between the user and the podcast, then
	remove the queue items from that podcast.
